Fix button not centered

--- a/style.css
+++ b/style.css
@@ -323,11 +323,11 @@ p{
     align-items: center;
 
     position: relative;
-    /* top: 90%; */
-    /* bottom: 30px; */
-    right: 0%;
-    left: 41%;
-
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
     cursor: pointer;
 
     transition: all .2s ease-in-out;
